[PF-198] - accordion align text, fix logo size

--- a/src/components/Header/HeaderContent.module.scss
+++ b/src/components/Header/HeaderContent.module.scss
@@ -23,7 +23,8 @@
   user-select: none;
   cursor: pointer;
   margin-left: -8px;
-  width: 60px;
+  padding-top: 6px;
+  width: 50px;
   height: 50px;
 }
 
